<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="cultoftheunicorn.marvel.EtherAct" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="cultoftheunicorn.marvel.EtherAct">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/greeting_hint"
            android:visibility="invisible"
            android:text="@={viewModel.userText}" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="@{() -> viewModel.writeButtonClicked()}"
            android:text="@string/write" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible"
            android:onClick="@{() -> viewModel.readButtonClicked()}"
            android:text="@string/fetch_value" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@{viewModel.textReadFromContract}" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:indeterminate="true"
            android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.INVISIBLE}" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@{String.format(@string/gas_price, viewModel.gasPrice)}" />

        <SeekBar
            android:id="@+id/gas_price_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="@={viewModel.gasPrice}" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@{String.format(@string/gas_limit, viewModel.gasLimit)}" />

        <SeekBar
            android:id="@+id/gas_limit_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="300000"
            android:progress="@={viewModel.gasLimit}" />

    </LinearLayout>
</layout>

